Fix contrast of grey links (#3254)

--- a/src/amo/components/Footer/styles.scss
+++ b/src/amo/components/Footer/styles.scss
@@ -117,7 +117,7 @@
 
   a:link,
   a:visited {
-    color: $footer-copyright-link;
+    color: $grey-40;
     font-size: $font-size-s;
   }
 }
